--- a/.github/workflows/bump-version.yaml
+++ b/.github/workflows/bump-version.yaml
@@ -41,7 +41,7 @@ jobs:
           }
 
           # Get list of changed files
-          CHANGED_FILES=$(git diff --name-only main HEAD)
+          CHANGED_FILES=$(git diff --name-only origin/main HEAD)
           
           # Track which charts need bumping
           NEEDS_BUMP=false
@@ -68,7 +68,7 @@ jobs:
                   echo "Current version: $CURRENT_VERSION"
                   
                   # Get version from base branch
-                  BASE_VERSION=$(git show main:"$CHART_YAML" | yq eval '.version' -)
+                  BASE_VERSION=$(git show origin/main:"$CHART_YAML" | yq eval '.version' -)
                   echo "Base version: $BASE_VERSION"
 
                   if [ "$CURRENT_VERSION" == "$BASE_VERSION" ]; then
