--- a/charts/k8s-read/templates/deployment.yaml
+++ b/charts/k8s-read/templates/deployment.yaml
@@ -34,7 +34,7 @@ spec:
           args:
             {{- $globalClusterName := dig "miggo" "clusterName" "" .Values.global }}
             {{- $globalTenantId := dig "miggo" "projectId" "" .Values.global }}
-            {{- $globalProjectId := dig "miggo" "projectId" "" .Values.global }}
+            {{- $globalProjectId := dig "miggo" "tenantId" "" .Values.global }}
             {{- $globalOtlpEndpoint := dig "output" "otlp" "otlpEndpoint" "" .Values.global }}
             {{- $globalTlsSkipVerify := dig "output" "otlp" "tlsSkipVerify" "" .Values.global }}
             {{- $globalStdout := dig "output" "stdout" "" .Values.global }}
