--- a/charts/static-sbom/templates/deployment.yaml
+++ b/charts/static-sbom/templates/deployment.yaml
@@ -32,16 +32,26 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           args:
-            - --cluster-name={{ .Values.miggo.clusterName }}
-            - --tenant-name={{ .Values.miggo.tenantId }}
-            - --project-name={{ .Values.miggo.projectId }}
-            - --otlp-endpoint={{ .Values.output.otlp.otlpEndpoint }}
-            - --tls-skip-verify={{ .Values.output.otlp.tlsSkipVerify }}
-            - --stdout={{ .Values.output.stdout }}
-            - --port={{ .Values.healthcheck.port }}
-            - --metric-otlp-endpoint={{ .Values.output.otlp.otlpEndpoint }}
-            - --metric-tls-skip-verify={{ .Values.output.otlp.tlsSkipVerify }}
-            - --metric-interval={{ .Values.config.metrics.interval }}
+            {{- $globalClusterName := dig "miggo" "clusterName" "" .Values.global }}
+            {{- $globalTenantId := dig "miggo" "tenantId" "" .Values.global }}
+            {{- $globalProjectId := dig "miggo" "projectId" "" .Values.global }}
+            {{- $globalOtlpEndpoint := dig "output" "otlp" "otlpEndpoint" "" .Values.global }}
+            {{- $globalTlsSkipVerify := dig "output" "otlp" "tlsSkipVerify" "" .Values.global }}
+            {{- $globalStdout := dig "output" "stdout" "" .Values.global }}
+            {{- $globalHealthPort := dig "healthcheck" "port" "" .Values.global }}
+            {{- $globalMetricOtlpEndpoint := dig "output" "otlp" "otlpEndpoint" "" .Values.global }}
+            {{- $globalMetricTlsSkipVerify := dig "output" "otlp" "tlsSkipVerify" "" .Values.global }}
+            {{- $globalMetricInterval := dig "config" "metrics" "interval" "" .Values.global }}
+            - --cluster-name={{ coalesce .Values.miggo.clusterName $globalClusterName }}
+            - --tenant-name={{ coalesce .Values.miggo.tenantId $globalTenantId }}  
+            - --project-name={{ coalesce .Values.miggo.projectId $globalProjectId }}
+            - --otlp-endpoint={{ coalesce .Values.output.otlp.otlpEndpoint $globalOtlpEndpoint }} 
+            - --tls-skip-verify={{ default .Values.output.otlp.tlsSkipVerify $globalTlsSkipVerify }}
+            - --stdout={{ default .Values.output.stdout $globalStdout }}
+            - --port={{ coalesce .Values.healthcheck.port $globalHealthPort }}
+            - --metric-otlp-endpoint={{ coalesce .Values.output.otlp.otlpEndpoint $globalMetricOtlpEndpoint }}
+            - --metric-tls-skip-verify={{ default .Values.output.otlp.tlsSkipVerify $globalMetricTlsSkipVerify }}
+            - --metric-interval={{ coalesce .Values.config.metrics.interval $globalMetricInterval }}
             - --queue-size={{ .Values.config.queueSize }}
             {{ if .Values.config.disableCompression }}
             - --disable-compression
