--- a/charts/k8s-read/values.yaml
+++ b/charts/k8s-read/values.yaml
@@ -29,7 +29,7 @@ output:
   stdout: false
   otlp:
     otlpEndpoint: ""
-    tlsSkipVerify: true
+    tlsSkipVerify: false
     
     # Leave empty if you want to create default secrets based on the httpAuthHeader param.
     #
