--- a/charts/k8s-integration/Chart.yaml
+++ b/charts/k8s-integration/Chart.yaml
@@ -6,7 +6,7 @@ version: 0.0.1
 appVersion: "0.0.1"
 dependencies:
   - name: k8s-read
-    repository: https://miggo-io.github.io/k8s-read
+    repository: https://miggo-io.github.io/miggo-helm-charts
     version: 0.0.1
     condition: k8s-read.enabled
   - name: static-sbom
