--- a/charts/k8s-integration/values.yaml
+++ b/charts/k8s-integration/values.yaml
@@ -15,7 +15,7 @@ global:
     stdout: false
     otlp:
       otlpEndpoint: ""
-      tlsSkipVerify: true
+      tlsSkipVerify: false
       
       # Leave empty if you want to create default secrets based on the httpAuthHeader param.
       #
