--- a/charts/static-sbom/templates/image-secrets.yaml
+++ b/charts/static-sbom/templates/image-secrets.yaml
@@ -5,5 +5,11 @@ metadata:
   name: static-sbom-miggo-regcred
 type: kubernetes.io/dockerconfigjson
 data:
-  .dockerconfigjson: {{ printf "{\"auths\":{\"%s\":{\"username\":\"%s\",\"password\":\"%s\"}}}" .Values.imageCredentials.registry .Values.imageCredentials.username .Values.imageCredentials.password | b64enc | quote }}
+  {{- $globalImageCredentialsRegistry := dig "imageCredentials" "registry" "" .Values.global }}
+  {{- $globalImageCredentialsUsername := dig "imageCredentials" "username" "" .Values.global }}
+  {{- $globalImageCredentialsPassword := dig "imageCredentials" "password" "" .Values.global }}
+  {{- $imageCredentialsRegistry := coalesce .Values.imageCredentials.registry $globalImageCredentialsRegistry }}
+  {{- $imageCredentialsUsername := coalesce .Values.imageCredentials.username $globalImageCredentialsUsername }}
+  {{- $imageCredentialsPassword := coalesce .Values.imageCredentials.password $globalImageCredentialsPassword }}
+  .dockerconfigjson: {{ printf "{\"auths\":{\"%s\":{\"username\":\"%s\",\"password\":\"%s\"}}}" $imageCredentialsRegistry $imageCredentialsUsername $imageCredentialsPassword | b64enc | quote }}
 {{- end }}
