fix empty global

--- a/charts/k8s-read/templates/image-secrets.yaml
+++ b/charts/k8s-read/templates/image-secrets.yaml
@@ -5,9 +5,10 @@ metadata:
   name: k8s-read-miggo-regcred
 type: kubernetes.io/dockerconfigjson
 data:
-  {{- $globalImageCredentialsRegistry := dig "imageCredentials" "registry" "" .Values.global }}
-  {{- $globalImageCredentialsUsername := dig "imageCredentials" "username" "" .Values.global }}
-  {{- $globalImageCredentialsPassword := dig "imageCredentials" "password" "" .Values.global }}
+  {{- $global := .Values.global | default dict }}
+  {{- $globalImageCredentialsRegistry := dig "global" "imageCredentials" "registry" "" $global }}
+  {{- $globalImageCredentialsUsername := dig "global" "imageCredentials" "username" "" $global }}
+  {{- $globalImageCredentialsPassword := dig "global" "imageCredentials" "password" "" $global }}
   {{- $imageCredentialsRegistry := coalesce .Values.imageCredentials.registry $globalImageCredentialsRegistry }}
   {{- $imageCredentialsUsername := coalesce .Values.imageCredentials.username $globalImageCredentialsUsername }}
   {{- $imageCredentialsPassword := coalesce .Values.imageCredentials.password $globalImageCredentialsPassword }}
