--- a/charts/k8s-read/templates/deployment.yaml
+++ b/charts/k8s-read/templates/deployment.yaml
@@ -54,14 +54,20 @@ spec:
             - --metric-tls-skip-verify={{ default .Values.output.otlp.tlsSkipVerify $globalMetricTlsSkipVerify }}
             - --metric-interval={{ coalesce .Values.config.metrics.interval $globalMetricInterval }}
             - --interval={{ .Values.config.interval }}
-          {{- if .Values.output.otlp.existingSecret }}
           envFrom:
+          {{- if .Values.output.otlp.existingSecret }}
           - secretRef:
               name: {{ .Values.output.otlp.existingSecret }}
           {{- else }}
-          envFrom:
           - secretRef:
               name: k8s-read-otlp-secret
+          {{- end }}
+          {{- with .Values.extraEnvsFrom }}
+          {{- toYaml . | nindent 10 }}
+          {{- end }}
+          env:
+          {{- with .Values.extraEnvs }}
+            {{- toYaml . | nindent 12 }}
           {{- end }}
           ports:
           - containerPort: {{ .Values.healthcheck.port }}
