--- a/charts/k8s-read/templates/oltp-secret.yaml
+++ b/charts/k8s-read/templates/oltp-secret.yaml
@@ -1,11 +1,14 @@
-{{- if empty .Values.output.otlp.existingSecret }}
+{{- $global := .Values.global | default dict }}
+{{- $globalOtlpHttpAuthHeader := dig "output" "otlp" "httpAuthHeader" "" $global }}
+{{- $authHeader := coalesce .Values.output.otlp.httpAuthHeader $globalOtlpHttpAuthHeader }}
+{{- if and (empty .Values.output.otlp.existingSecret) (not (empty $authHeader)) }}
 apiVersion: v1
 kind: Secret
 metadata:
   name: k8s-read-otlp-secret
 type: Opaque
 data:
-  K8S_READ_OTLP_AUTH_HEADER: {{ .Values.output.otlp.httpAuthHeader | b64enc | quote }}
-  K8S_READ_METRIC_OTLP_AUTH_HEADER: {{ .Values.output.otlp.httpAuthHeader | b64enc | quote }}
+  K8S_READ_OTLP_AUTH_HEADER: {{ $authHeader | b64enc | quote }}
+  K8S_READ_METRIC_OTLP_AUTH_HEADER: {{ $authHeader | b64enc | quote }}
 {{- end }}
 ---
