--- a/charts/static-sbom/templates/image-secrets.yaml
+++ b/charts/static-sbom/templates/image-secrets.yaml
@@ -1,4 +1,7 @@
-{{- if (empty (index .Values.imagePullSecrets 0).name) }}
+{{- $global := .Values.global | default dict }}
+{{- $globalImageCredentialsUsername := dig "imageCredentials" "username" "" $global }}
+{{- $username := coalesce .Values.imageCredentials.username $globalImageCredentialsUsername }}
+{{- if and (empty (index .Values.imagePullSecrets 0).name) (not (empty $username)) }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -6,11 +9,10 @@ metadata:
 type: kubernetes.io/dockerconfigjson
 data:
   {{- $global := .Values.global | default dict }}
-  {{- $globalImageCredentialsRegistry := dig "global" "imageCredentials" "registry" "" $global }}
-  {{- $globalImageCredentialsUsername := dig "global" "imageCredentials" "username" "" $global }}
-  {{- $globalImageCredentialsPassword := dig "global" "imageCredentials" "password" "" $global }}
+  {{- $globalImageCredentialsRegistry := dig "imageCredentials" "registry" "" $global }}
+  {{- $globalImageCredentialsUsername := dig "imageCredentials" "username" "" $global }}
+  {{- $globalImageCredentialsPassword := dig "imageCredentials" "password" "" $global }}
   {{- $imageCredentialsRegistry := coalesce .Values.imageCredentials.registry $globalImageCredentialsRegistry }}
-  {{- $imageCredentialsUsername := coalesce .Values.imageCredentials.username $globalImageCredentialsUsername }}
   {{- $imageCredentialsPassword := coalesce .Values.imageCredentials.password $globalImageCredentialsPassword }}
-  .dockerconfigjson: {{ printf "{\"auths\":{\"%s\":{\"username\":\"%s\",\"password\":\"%s\"}}}" $imageCredentialsRegistry $imageCredentialsUsername $imageCredentialsPassword | b64enc | quote }}
+  .dockerconfigjson: {{ printf "{\"auths\":{\"%s\":{\"username\":\"%s\",\"password\":\"%s\"}}}" $imageCredentialsRegistry $username $imageCredentialsPassword | b64enc | quote }}
 {{- end }}
