--- a/charts/k8s-read/values.yaml
+++ b/charts/k8s-read/values.yaml
@@ -22,6 +22,7 @@ miggo:
 
 config:
   interval: 6h
+  disableCompression: false
   metrics:
     interval: 60s
 
@@ -47,6 +48,9 @@ serviceAccount:
   automount: true
   annotations: {}
   name: ""
+
+labels: {}
+annotations: {}
 
 podAnnotations: {}
 podLabels: {}
