--- a/charts/k8s-read/templates/role.yaml
+++ b/charts/k8s-read/templates/role.yaml
@@ -16,7 +16,7 @@ rules:
   verbs: ["get", "list", "watch"]
 
 - apiGroups: ["gateway.networking.k8s.io"]
-  resources: ["gateways", "httproutes"]
+  resources: ["gateways", "httproutes", "gatewayclasses"]
   verbs: ["get", "list", "watch"]
 
 - apiGroups: ["apps"]
