secrets are optional

--- a/charts/k8s-read/templates/deployment.yaml
+++ b/charts/k8s-read/templates/deployment.yaml
@@ -68,7 +68,7 @@ spec:
           {{- if .Values.output.otlp.existingSecret }}
           - secretRef:
               name: {{ .Values.output.otlp.existingSecret }}
-          {{- else }}
+          {{- else if (not (empty (include "common.otlp.authHeader" .))) }}
           - secretRef:
               name: k8s-read-otlp-secret
           {{- end }}
