--- a/charts/static-sbom/templates/oltp-secret.yaml
+++ b/charts/static-sbom/templates/oltp-secret.yaml
@@ -1,14 +1,11 @@
-{{- $global := .Values.global | default dict }}
-{{- $globalOtlpHttpAuthHeader := dig "output" "otlp" "httpAuthHeader" "" $global }}
-{{- $authHeader := coalesce .Values.output.otlp.httpAuthHeader $globalOtlpHttpAuthHeader }}
-{{- if and (empty .Values.output.otlp.existingSecret) (not (empty $authHeader)) }}
+{{- if and (empty .Values.output.otlp.existingSecret) (not (empty (include "common.otlp.authHeader" .))) }}
 apiVersion: v1
 kind: Secret
 metadata:
   name: static-sbom-otlp-secret
 type: Opaque
 data:
-  STATIC_SBOM_OTLP_AUTH_HEADER: {{ $authHeader | b64enc | quote }}
-  STATIC_SBOM_METRIC_OTLP_AUTH_HEADER: {{ $authHeader | b64enc | quote }}
+  STATIC_SBOM_OTLP_AUTH_HEADER: {{ (include "common.otlp.authHeader" .) | b64enc | quote }}
+  STATIC_SBOM_METRIC_OTLP_AUTH_HEADER: {{ (include "common.otlp.authHeader" .) | b64enc | quote }}
 {{- end }}
 ---
