--- a/charts/miggo-collector/templates/image-secrets.yaml
+++ b/charts/miggo-collector/templates/image-secrets.yaml
@@ -9,7 +9,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: k8s-read-miggo-regcred
+  name: collector-miggo-regcred
 type: kubernetes.io/dockerconfigjson
 data:
   {{- $global := .Values.global | default dict }}
@@ -23,7 +23,7 @@ data:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: k8s-read-miggo-regcred
+  name: collector-miggo-regcred
 type: kubernetes.io/dockerconfigjson
 data:
   {{- $global := .Values.global | default dict }}
@@ -31,3 +31,4 @@ data:
   {{- $imageRegistry := coalesce .Values.image.registry $globalImageRegistry }}
   .dockerconfigjson: {{ printf "{\"auths\":{\"%s\":{\"username\":\"%s\",\"password\":\"%s\"}}}" $imageRegistry $clientId $accessKey | b64enc | quote }}
 {{- end }}
+
