integrate into k8s-integration

--- a/charts/k8s-integration/Chart.yaml
+++ b/charts/k8s-integration/Chart.yaml
@@ -13,3 +13,7 @@ dependencies:
     condition: static-sbom.enabled
     repository: file://../static-sbom
     version: "*"
+  - name: collector
+    condition: collector.enabled
+    repository: file://../miggo-collector
+    version: "*"
