--- a/charts/k8s-integration/values.yaml
+++ b/charts/k8s-integration/values.yaml
@@ -53,3 +53,6 @@ static-sbom:
   config:
     metrics:
       interval: "" # Set empty to allow global value inheritance or user override
+
+  collector:
+    enabled: false
