--- a/charts/miggo-collector/Chart.yaml
+++ b/charts/miggo-collector/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: miggo-collector
+name: collector
 description: A Helm chart for miggo-collector
 type: application
 version: 0.0.1
