--- a/charts/miggo-collector/templates/service.yaml
+++ b/charts/miggo-collector/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "miggo-collector.fullname" . }}
+  name: miggo-collector
   {{- with .Values.service.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
