--- a/charts/k8s-read/templates/deployment.yaml
+++ b/charts/k8s-read/templates/deployment.yaml
@@ -28,7 +28,7 @@ spec:
         {{- tpl (toYaml .) $ | nindent 8 }}
         {{- end }}
     spec:
-      {{- include "imagePullSecrets" . | nindent 6 }}
+      {{- include "common.imagePullSecrets" (list .Values "k8s-read") | nindent 6 }}
       serviceAccountName: {{ include "k8s-read.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
@@ -39,24 +39,16 @@ spec:
           image: "{{ .Values.image.registry }}/{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           args:
-            {{- $global := .Values.global | default dict }}
-            {{- $globalClusterName := dig "miggo" "clusterName" "" $global }}
-            {{- $globalTenantId := dig "miggo" "tenantId" "" $global }}
-            {{- $globalProjectId := dig "miggo" "projectId" "" $global }}
-            {{- $globalTlsSkipVerify := dig "output" "otlp" "tlsSkipVerify" "" $global }}
-            {{- $globalStdout := dig "output" "stdout" "" $global }}
-            {{- $globalHealthPort := dig "healthcheck" "port" "" $global }}
-            {{- $globalMetricInterval := dig "config" "metrics" "interval" "" $global }}
-            - --cluster-name={{ coalesce .Values.miggo.clusterName $globalClusterName }}
-            - --tenant-name={{ coalesce .Values.miggo.tenantId $globalTenantId }}  
-            - --project-name={{ coalesce .Values.miggo.projectId $globalProjectId }}
+            - --cluster-name={{ (include "common.getVal" (list . "miggo.clusterName")) }}
+            - --tenant-name={{ (include "common.getVal" (list . "miggo.tenantId")) }}
+            - --project-name={{ (include "common.getVal" (list . "miggo.projectId")) }}
             - --otlp-endpoint={{ (include "common.otlpEndpoint" .) }} 
-            - --tls-skip-verify={{ (include "common.tlsSkipVerify" .) }} 
-            - --stdout={{ default .Values.output.stdout $globalStdout }}
-            - --port={{ coalesce .Values.healthcheck.port $globalHealthPort }}
-            - --metric-otlp-endpoint={{ (include "common.otlpEndpoint" .) }} 
-            - --metric-tls-skip-verify={{ (include "common.tlsSkipVerify" .) }} 
-            - --metric-interval={{ coalesce .Values.config.metrics.interval $globalMetricInterval }}
+            - --tls-skip-verify={{ (include "common.getVal" (list . "output.otlp.tlsSkipVerify")) }}
+            - --stdout={{ (include "common.getVal" (list . "output.stdout")) }}
+            - --port={{ (include "common.getVal" (list . "healthcheck.port")) }}
+            - --metric-otlp-endpoint={{ include "common.otlpEndpoint" . }}
+            - --metric-tls-skip-verify={{ (include "common.getVal" (list . "output.otlp.tlsSkipVerify")) }}
+            - --metric-interval={{ (include "common.getVal" (list . "config.metrics.interval")) }}
             - --interval={{ .Values.config.interval }}
             {{ if .Values.config.disableCompression }}
             - --disable-compression
