--- a/charts/k8s-read/templates/image-secrets.yaml
+++ b/charts/k8s-read/templates/image-secrets.yaml
@@ -1,33 +1,1 @@
-{{- $global := .Values.global | default dict }}
-{{- $globalImageCredentialsUsername := dig "imageCredentials" "username" "" $global }}
-{{- $username := coalesce .Values.imageCredentials.username $globalImageCredentialsUsername }}
-{{- $globalAccessKey := dig "config" "accessKey" "" $global }}
-{{- $accessKey := coalesce .Values.config.accessKey $globalAccessKey }}
-{{- $globalClientId := dig "config" "clientId" "" $global }}
-{{- $clientId := coalesce .Values.config.clientId $globalClientId }}
-{{- if and (empty (index .Values.imagePullSecrets 0).name) (not (empty $username)) }}
-apiVersion: v1
-kind: Secret
-metadata:
-  name: k8s-read-miggo-regcred
-type: kubernetes.io/dockerconfigjson
-data:
-  {{- $global := .Values.global | default dict }}
-  {{- $globalImageCredentialsRegistry := dig "imageCredentials" "registry" "" $global }}
-  {{- $globalImageCredentialsUsername := dig "imageCredentials" "username" "" $global }}
-  {{- $globalImageCredentialsPassword := dig "imageCredentials" "password" "" $global }}
-  {{- $imageCredentialsRegistry := coalesce .Values.imageCredentials.registry $globalImageCredentialsRegistry }}
-  {{- $imageCredentialsPassword := coalesce .Values.imageCredentials.password $globalImageCredentialsPassword }}
-  .dockerconfigjson: {{ printf "{\"auths\":{\"%s\":{\"username\":\"%s\",\"password\":\"%s\"}}}" $imageCredentialsRegistry $username $imageCredentialsPassword | b64enc | quote }}
-{{- else if not (empty ($accessKey)) -}}
-apiVersion: v1
-kind: Secret
-metadata:
-  name: k8s-read-miggo-regcred
-type: kubernetes.io/dockerconfigjson
-data:
-  {{- $global := .Values.global | default dict }}
-  {{- $globalImageRegistry := dig "image" "registry" "" $global }}
-  {{- $imageRegistry := coalesce .Values.image.registry $globalImageRegistry }}
-  .dockerconfigjson: {{ printf "{\"auths\":{\"%s\":{\"username\":\"%s\",\"password\":\"%s\"}}}" $imageRegistry $clientId $accessKey | b64enc | quote }}
-{{- end }}
+{{ include "common.miggoRegcredSecret" (list .Values "k8s-read") }}
