--- a/charts/static-sbom/values.yaml
+++ b/charts/static-sbom/values.yaml
@@ -33,10 +33,10 @@ config:
       name: ""
 
 output:
-  stdout: false
+  stdout: "false"
   otlp:
     otlpEndpoint: ""
-    tlsSkipVerify: false
+    tlsSkipVerify: "false"
     
     # Leave empty if you want to create default secrets based on the httpAuthHeader param.
     #
