add common library chart (#57)
* add common library chart

* [AUTO GITHUB] Bump chart versions

* fix

* [AUTO GITHUB] Bump chart versions

---------

Co-authored-by: dvdlevanon-miggo <dvdlevanon-miggo@users.noreply.github.com>

--- a/charts/k8s-read/Chart.yaml
+++ b/charts/k8s-read/Chart.yaml
@@ -4,3 +4,7 @@ description: A Helm chart for miggo's k8s-read
 type: application
 version: 0.0.10
 appVersion: "0.0.1"
+dependencies:
+  - name: common
+    repository: file://../common
+    version: "*"
