--- a/charts/k8s-read/values.yaml
+++ b/charts/k8s-read/values.yaml
@@ -38,10 +38,10 @@ config:
   accessKeySecret: ""
 
 output:
-  stdout: false
+  stdout: "false"
   otlp:
-    otlpEndpoint: ""
-    tlsSkipVerify: false
+    otlpEndpoint: 
+    tlsSkipVerify: "false"
     
     # Leave empty if you want to create default secrets based on the httpAuthHeader param.
     #
@@ -76,7 +76,7 @@ resources:
   requests:
     cpu: 100m
     memory: 512Mi
-
+  
 healthcheck:
   port: 6666
 
