--- a/charts/miggo-collector/Chart.yaml
+++ b/charts/miggo-collector/Chart.yaml
@@ -4,3 +4,7 @@ description: A Helm chart for miggo-collector
 type: application
 version: 0.0.2
 appVersion: "0.0.1"
+dependencies:
+  - name: common
+    repository: file://../common
+    version: "*"
