--- a/charts/miggo-collector/values.yaml
+++ b/charts/miggo-collector/values.yaml
@@ -54,11 +54,11 @@ securityContext: {}
 
 resources:
   limits:
-    cpu: 250m
-    memory: 256Mi
+    cpu: 500m
+    memory: 2Gi
   requests:
-    cpu: 100m
-    memory: 64Mi
+    cpu: 250m
+    memory: 1Gi
 
 volumes: []
 volumeMounts: []
