--- a/charts/static-sbom/Chart.yaml
+++ b/charts/static-sbom/Chart.yaml
@@ -4,3 +4,7 @@ description: A Helm chart for miggo's static-sbom
 type: application
 version: 0.0.13
 appVersion: "0.0.1"
+dependencies:
+  - name: common
+    repository: file://../common
+    version: "*"
