--- a/charts/static-sbom/values.yaml
+++ b/charts/static-sbom/values.yaml
@@ -11,6 +11,7 @@ imageCredentials:
   password: ""
 
 image:
+  registry: registry.miggo.io
   repository: miggoprod/static-sbom
   tag: latest
   pullPolicy: Always
@@ -31,11 +32,21 @@ config:
     configMap:
       enabled: true
       name: ""
+  clientId: P2UOKcx9hh7CfM2i72CflPnVowpH
+  
+  # Ignored when accessKeySecret specified
+  # 
+  accessKey: ""
+
+  # Leave empty if you want to create default secrets based on the accessKey param.
+  #
+  accessKeySecret: ""
+  
 
 output:
   stdout: "false"
   otlp:
-    otlpEndpoint: ""
+    otlpEndpoint:
     tlsSkipVerify: "false"
     
     # Leave empty if you want to create default secrets based on the httpAuthHeader param.
