incldue common chart

--- a/charts/k8s-integration/Chart.yaml
+++ b/charts/k8s-integration/Chart.yaml
@@ -17,3 +17,6 @@ dependencies:
     condition: collector.enabled
     repository: file://../miggo-collector
     version: "*"
+  - name: common
+    repository: file://../common
+    version: "*"
